link to youtube video

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 [[paper](https://doi.org/10.1145/3130800.3130807)]
 -->
 [<a href="https://arxiv.org/abs/1703.10405">early version</a>]
+[<a href="https://youtu.be/wcQy42XWTnA">video (youtube)</a>]
 
 </blockquote>
 
