--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 
 <blockquote>
 
+[<a href="https://youtu.be/wcQy42XWTnA">Youtube video</a>]
+
 <!--
 [[paper](https://doi.org/10.1145/3130800.3130807)]
 -->
-[<a href="https://arxiv.org/abs/1703.10405">early version</a>]
+[<a href="https://arxiv.org/abs/1703.10405">early version (2017)</a>]
+
 
 </blockquote>
 
