trying to be cute with the expense of being less informative

--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 <!--
 [[paper](https://doi.org/10.1145/3130800.3130807)]
 -->
-[<a href="https://arxiv.org/abs/1703.10405">early version (2017)</a>]
-[<a href="https://youtu.be/wcQy42XWTnA">video (youtube)</a>]
+<a href="https://arxiv.org/abs/1703.10405">
+<img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://arxiv.org/" alt="[early version (2017)]">
+</a>
+<a href="https://youtu.be/wcQy42XWTnA">
+<img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.youtube.com/" alt = "video (youtube)">
+</a>
+<a href="https://www.technologyreview.com/s/604113/the-best-of-the-physics-arxiv-week-ending-april-8-2017/">
+<img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.technologyreview.com/" alt = "[MIT technology review]">
+</a>
 
 </blockquote>
 
