minor, 3dnchu link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 <a href="https://www.technologyreview.com/s/604113/the-best-of-the-physics-arxiv-week-ending-april-8-2017/">
 <img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.technologyreview.com/" alt = "[MIT technology review]">
 </a>
+<a href="http://3dnchu.com/archives/autocomplete-3d-sculpting/">
+<img src="http://s2.googleusercontent.com/s2/favicons?domain_url=3dnchu.com/" alt = "[3dnchu]">
+</a>
 
 </blockquote>
 
