--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 <a href="https://youtu.be/wcQy42XWTnA">
 <img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.youtube.com/" alt = "video (youtube)">
 </a>
+
+</blockquote>
+
+<h2> Media coverage </h2>
+
+<blockquote>
+
 <a href="https://www.technologyreview.com/s/604113/the-best-of-the-physics-arxiv-week-ending-april-8-2017/">
 <img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.technologyreview.com/" alt = "[MIT technology review]">
 </a>
