add hidden youtube yoda video

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 <a href="https://youtu.be/wcQy42XWTnA">
 <img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.youtube.com/" alt = "video (youtube)">
 </a>
+<!--
+<a href="https://youtu.be/I3PgFEso4A4">
+<img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.youtube.com/" alt = "yoda video (youtube)">
+</a>
+-->
 
 </blockquote>
 
