--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 <!--
 [[paper](https://doi.org/10.1145/3130800.3130807)]
 -->
+<a href="http://junxnui.github.io/research/sig18_autocomplete_3D_sculpting.pdf">
+<img src="http://s2.googleusercontent.com/s2/favicons?domain_url=http://junxnui.github.io/" alt="paper">
+</a>
 <a href="https://arxiv.org/abs/1703.10405">
 <img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://arxiv.org/" alt="[early version (2017)]">
 </a>
