add fastforward video

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ We propose an interactive 3D sculpting system that can analyze what users have d
 <a href="https://arxiv.org/abs/1703.10405">
 <img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://arxiv.org/" alt="[early version (2017)]">
 </a>
+<a href= "https://youtu.be/P1roDCfyb4k">
+<img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.youtube.com/" alt = "fastforward (youtube)">
+</a>
 <a href="https://youtu.be/wcQy42XWTnA">
 <img src="http://s2.googleusercontent.com/s2/favicons?domain_url=https://www.youtube.com/" alt = "video (youtube)">
 </a>
